--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 $(document).ready(function() {
                   $('img.callback').zoomable({
                     onshow:  function() { alert('image shown') },
-                    onhide:  function() { alert('image hidden') },
+                    //onhide:  function() { alert('image hidden') },
                   });
                 });
               </script>            
