--- a/examples/examples.html
+++ b/examples/examples.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, user-scalable=yes">  
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script src="zoomable.js"></script>
+    <script src="../zoomable.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -148,7 +148,7 @@
                 $(document).ready(function() {
                   $('img.callback').zoomable({
                     onshow:  function() { alert('image shown') },
-                    onhide:  function() { alert('image hidden') },
+                    //onhide:  function() { alert('image hidden') },
                   });
                 });
               </script>            
